# ecom

mern/: package-lock.json  package.json
mern/client/: package-lock.json  package.json
mern/client/src/: App.jsx
mern/client/src/components/admin-view/: header.jsx  image-upload.jsx  layout.jsx  product-tile.jsx  sidebar.jsx
mern/client/src/components/auth/: layout.jsx
mern/client/src/components/common/: check-auth.jsx  form.jsx
mern/client/src/components/shopping-view/: account.jsx  checkout.jsx  home.jsx  listing.jsx
mern/client/src/config/: index.js
mern/client/src/pages/admin-view/: features.jsx  order.jsx  (+2 more)
mern/server/: package-lock.json  package.json  server.js
mern/server/controllers/admin/: product-controller.js
mern/server/controllers/auth/: auth-controller.js
mern/server/helpers/: cloudinary.js
mern/server/models/: Product.js
mern/server/routes/admin/: product-routes.js
mern/server/routes/auth/: auth-routes.js
rust/: .env.example  Cargo.toml  main.css  package-lock.json  package.json  tailwind.config.js
rust/assets/css/: main.css
rust/assets/js/: admin.js  admin_product.js  drawer.js  main.js  script.js
rust/database/: db  db-shm  db-wal
rust/migrations/: 20240912231519_init.up.sql  20240929131736_product.down.sql  20240929131736_product.up.sql
rust/src/: config.rs  lib.rs  main.rs  router.rs
rust/src/controllers/: admin.rs  auth.rs
rust/src/controllers/auth/: login_user.rs  mod.rs  register_user.rs
rust/src/middleware/: auth.rs
rust/src/models/: image.rs  mod.rs  product.rs  user.rs
rust/src/utilities/: app_error.rs  hash.rs  jwt.rs  mod.rs
rust/src/views/: mod.rs
rust/src/views/layout/: admin_layout.rs  app_layout.rs  auth_layout.rs  mod.rs
rust/src/views/pages/: admin.rs  auth.rs  home.rs  login.rs  mod.rs  register.rs
rust/src/views/ui/: icons.rs  image_upload.rs  input_with_label.rs  mod.rs  primary_button.rs  select.rs  text_area.rs
(+8 files in other folders)
