[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive", "env"] }
cookie = "0.18.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
maud = { version = "0.26.0", features = ["axum"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tailwind_fuse = "0.3.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.0", features = ["fs", "compression-gzip", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
debug = false 
lto = true 
opt-level = "z"
panic = 'abort'
